[package]
name = "trainer_pw"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features=["winuser","consoleapi","memoryapi"] }